--- a/config/v1/Skype/index.html
+++ b/config/v1/Skype/index.html
@@ -1,1 +1,10 @@
-<h1>Test</h1>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="refresh" content="0; URL=https://example.com" />
+</head>
+<body>
+  <p>Вы будете перенаправлены на <a href="https://example.com">example.com</a>.</p>
+</body>
+</html>
