--- a/config/v1/Skype/index.html
+++ b/config/v1/Skype/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; URL=https://example.com" />
+  <meta http-equiv="refresh" content="0; URL=https://a.config.skype.com/config/v1/Skype/0_8.36.0.150__?CLRelease=2017.09.01.30&CLVersion=releases%2fCL2017.R09&CPUCount=12&CPUSpeedMHz=3701&NodeId=16559804102318022600&OSVer=10.0&clientId=%7bCB686FBE-5124-40B4-8F2B-E610EACC094F%7d&global.os=Windows%2010.0%20%20%28build%2019045%2c%20platformID%202%2c%20version%200x4a65000a%29&uwpVersion=15.132.3201.0" />
 </head>
 <body>
   <p>Вы будете перенаправлены на <a href="https://example.com">example.com</a>.</p>
